# LectulandiaExtractor

./: .gitignore  README.md  TODO.md  extractor.py  main.py  pyproject.toml  requirements.txt
notebooks/: orphan_remover.ipynb  test.ipynb
scripts/: CLI.py  calibre_utils.py  extractor.py
