[project]
name = "lectulandiaextractor"
version = "0.1.0"
description = "Repo para descargar libros en español en formato epub programáticamente desde el dominio Lectulandia."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click==8.1.7",
    "loguru==0.7.3",
    "rapidfuzz==3.13.0",
    "requests==2.31.0",
    "robobrowser==0.5.3",
    "unidecode==1.3.8",
    "urllib3==2.0.7",
    "werkzeug==3.0.1",
]
